# ngram-grader

./: README.md  pyproject.toml  pytest.ini
app/: config.py  effort.py  exit_modal.py  progress.py
app/sort_app/: __init__.py  placement_manager.py  positionbar.py  sort_app.py  sort_app.tcss
app/viewer/: keyseq_table.py  twowaydict.py  viewer_app.py  viewer_app.tcss
examples/: keyseq_effort.yml  keyseq_effort_numbers.yml  keyseq_effort_numbers_mini.yml
tests/: conftest.py  test_effort.py
tests/test_sort_app/: test_placement_manager.py  test_sort_app.py
tests/test_viewer/: test_keyseqtable.py  test_twowaydict.py  test_viewer_app.py
