[project]
name = "ngram-grader"
version = "0.1.0"
description = "Program for ranking and scoring character ngrams"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "choix>=0.3.5",
    "matplotlib>=3.9.2",
    "plotext>=5.3.2",
    "pydantic>=2.9.2",
    "pyyaml>=6.0.2",
    "textual>=0.86.1",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.29.0",
    "mypy>=1.13.0",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "textual-dev>=1.6.1",
    "types-pyyaml>=6.0.12.20240917",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["app"]
